--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
             height: 300px;
         }
         #mainWrapper{
-            display: none;
+           display:none;
         }
         #chatWrapper{
             float: left;
@@ -25,6 +25,7 @@
             border: 1px #ccc solid;
         }
         #userWrapper{
+            display: none;
             float: left;
             padding: 10px;
             border-radius: 10px;
@@ -35,6 +36,7 @@
             max-height: 200px;
         }
         #nameWrapper{
+            /*display: none;*/
             float: left;
             padding: 10px;
             border-radius: 10px;
@@ -53,6 +55,7 @@
       <div id="nameWrapper">
          <h1>Chat IO</h1>
          <p>Username</p>
+          <div id="error"></div>
           <form id="userForm">
           <input type="text" size="35" id="username" placeholder="Username">
           <input type="submit" value="Submit">
@@ -77,5 +80,53 @@
           </div>
       </div>
   </div>
+
+  <script
+          src="https://code.jquery.com/jquery-3.2.1.min.js"
+          integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+          crossorigin="anonymous"></script>
+  <script src="/socket.io/socket.io.js"></script>
+  <script>
+      $(function () {
+          //connect with the socket
+          var socket = io.connect();
+
+          //set login user
+          $('#userForm').submit(function (e) {
+              e.preventDefault();
+              socket.emit('new_users',$('#username').val(),function (data) {
+                  if(data){
+                      $('#nameWrapper').hide();
+                      $('#mainWrapper').show();
+                      $('#userWrapper').show();
+                  }
+                  else {
+                     $('#error').html('User name must be declear');
+                  }
+              });
+          });
+          
+          //add username html
+          socket.on('usernames',function (data) {
+              var html = '';
+              for(var i=0;i<data.length;i++){
+                  html +=data[i] +'<br/>';
+              }
+              $('#users').html(html);
+          })
+
+          $('#messageForm').submit(function (e) {
+              e.preventDefault();
+              socket.emit('send_message',$('#message').val());
+              $('#message').val('');
+             // console.log('Submit');
+          });
+
+          socket.on('new_message',function (data) {
+              $('#chatWindow').append('<strong>'+data.user+'<strong>: '+data.msg+'<br/>');
+          })
+      })
+  </script>
+  <!--<script src="../public/javascript/main.js"></script>-->
 </body>
 </html>
